--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Rubik">
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+ 
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -36,22 +36,20 @@
 
  <div class=second>She looks so happy! The time we discussed works. How long shall I take her out for? </div>
 
- <div class="second">30 minute walk
-  $29</div>
+ <div class="fourth">30 minute walk   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   &nbsp; &nbsp;     <b>$29</b></div>
 
-  <div class= "second">1 hour walk
-  $49</div>
+  <div class= "fourth">1 hour walk  &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp;  &nbsp; &nbsp;      <b>$49</b></div>
 
  <div class="type"> Type a message… <div class="symb">       > </div> </div>
 
 </div>
 <div class="book">
-<h2>  Simple booking </h2>
-<p>
-  Stay in touch with our dog walkers through the chat <br> interface. This makes it easy to 
-  discuss arrangements and <br> make bookings. Once the walk has been completed you can <br> rate 
+<h1>  Simple booking </h1>
+<div class="p">
+  Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+  discuss arrangements and make bookings. Once the walk has been completed you can rate 
   your walker and book again all through the chat.
-</p>
+</div>
 </div>
 
 <div class="square2"></div>
@@ -59,7 +57,7 @@
 </div>
 <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ludmila Kowalski</a>.
+    Coded by <a href="https://ludmilakowalski.github.io/Portfolio/">Ludmila Kowalski</a>.
   </div>
 </body>
 </html>
